# ak_b_web

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  middlewares.rs  shutdown.rs  state.rs
backend/src/api/: mod.rs  openapi.rs
backend/src/api/routes/: health.rs  mod.rs  request.rs
backend/src/config/: config.rs  mail.rs  mod.rs  paths.rs
backend/src/errors/: config.rs
backend/src/services/: mod.rs  send_email.rs
backend/src/types/: mod.rs
backend/src/types/logger/: mod.rs
backend/src/types/requests/: mod.rs  payload.rs
backend/src/types/responses/: api_error.rs  api_message.rs  health.rs  mod.rs
backend/src/utils/: allow_email_input_default.rs  csv_to_vec.rs  duplicate_emails.rs  looks_like_email.rs  mod.rs  rate_defaults.rs
backend/src/utils/ip/: mod.rs
backend/src/utils/log/: default_log_level.rs  log_email_to_file.rs  mod.rs
backend/src/utils/mask_string/: mod.rs
frontend/: .env example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: index.ts
frontend/src/composables/: useContactForm.ts  useGlassNav.ts  useModalState.ts
frontend/src/pages/: index.ts
frontend/src/styles/: colors.css  foundation.css  main.css
frontend/src/types/: FAQ.ts  about.ts  advantages.ts  contacts.ts  index.ts  map.ts  review.ts  service.ts
src/: App.vue
(+32 files in other folders)
