[package]
name = "RustLettreSMTP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-server = "0.7.2"
chrono = "0.4.42"
config = "0.15.18"
dotenvy = "0.15.7"
lettre = { version = "0.11.18", features = ["smtp-transport", "native-tls"] }
once_cell = "1.21.3"
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
utoipa = { version = "5.4.0", features = ["macros", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
http = "1.3.1"
